Trailers don't have the YouTube, fixed where the trailer was overflowing a bit to the left, rating menu, z-index fixes

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   color: #FFF;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  z-index: -10;
   overflow: auto;
 }
 
@@ -137,7 +136,6 @@ code {
 
 .browse_container {
   display: inline;
-  z-index: -10;
   height: 100%;
   background-color: #131313;
 }
@@ -151,9 +149,8 @@ code {
 }
 
 .browse_container .row_item:focus,
-.browse_container .row_item:hover {
+.browse_container .row_item:hover{
   transform: scale(1.5);
-  z-index: 100;
 }
 
 [id^="itemInRowId1-"] {
@@ -161,7 +158,7 @@ code {
 }
 
 .arrow {
-  z-index: 101;
+  z-index: 11;
   overflow: hidden;
 }
 
@@ -175,10 +172,9 @@ code {
 }
 
 .youtube-container {
-  left: 0;
   top: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   aspect-ratio: 16/9;
@@ -186,10 +182,9 @@ code {
 }
 
 .youtube-container iframe {
-  width: 300%;
+  width: 900%;
   height: 100%;
-  margin-left: -100%;
-  overflow: hidden;
+  margin-left: -400%;
 }
 
 .profile_overview {
